# pymyanimelist

./: pyproject.toml
pymyanimelist/: __init__.py  _base.py  anime.py  mal.py  utils.py
pymyanimelist/models/: anime.py  animesearch.py  helper_models.py
src/pymyanimelist/: __init__.py  _base.py  anime.py  endpoints.py  mal.py  test.py
tests/: test_anime.py  test_animesearch.py  test_authenticate.py  test_mal.py
