[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymyanimelist_figaustin"
version = "0.0.1"
authors = [
  { name="figaustin", email="figaustin@yahoo.com" },
]
description = "A python wrapper for the MyAnimeList API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"