[build-system]
requires = ["setuptools>=61.0", "dacite==1.8.3", "requests==2.31.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymyanimelist_figaustin"
version = "0.0.1"
authors = [
  { name="figaustin", email="figaustin@yahoo.com" },
]
description = "A python wrapper for the MyAnimeList API"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"